<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/rezultat"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_margin="10dp"
                android:gravity="center_horizontal|center_vertical"
        android:maxLength="80"
        android:text="@string/ni"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.143"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/button1"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button2"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button3"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button4"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button5"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.633"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button6"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.784"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button7"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:text="@string/_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.935"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button8"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.028"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button9"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/button10"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/plus"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/minus"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.649"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/po"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/po"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/deleno"
        android:layout_width="54dp"
        android:layout_height="42dp"
        android:layout_marginTop="112dp"
        android:text="@string/deleno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

    <Button
        android:id="@+id/ednakvo"
        android:layout_width="327dp"
        android:layout_height="44dp"
        android:layout_marginTop="168dp"
        android:text="@string/ramno"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rezultat" />

</androidx.constraintlayout.widget.ConstraintLayout>